samples/_failures_safe/1761074754_206559_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db01977e.c: In function ‘main’:
./samples/SAFE/__tmp_db01977e.c:145:19: error: expected ‘;’ at end of input
  145 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_db01977e.c:145:13: error: expected declaration or statement at end of input
  145 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_db01977e.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_db01977e.c:145:13: error: expected declaration or statement at end of input
